--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -8,7 +8,7 @@ WORKDIR /usr/src/workspace
 COPY requirements.txt ./
 
 # install dependencies
-RUN pip install -r requirements.txt
+RUN pip3 install -r requirements.txt
 
 # command to run on container start
 CMD jupyter notebook "--no-browser" "--port=9998" "--ip=0.0.0.0" "--allow-root"
