--- a/Docker/requirements.txt
+++ b/Docker/requirements.txt
@@ -1,10 +1,9 @@
-torchinfo
-jupyter
-pillow
-opencv-python
-numpy
-pandas
-matplotlib
-scikit-learn
-imageio
-scipy
+torchinfo==1.7.0
+jupyter==1.0.0
+pillow==9.0.1
+opencv-python==4.5.5
+pandas==1.4.2
+matplotlib==3.5.2
+scikit-learn==1.1.1
+imageio==2.19.3
+scipy==1.8.1
