--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@ __pycache__/
 *.py[cod]
 *$py.class
 *.ipynb_checkpoints
+
+#project 2 images
+**/landmark_images/
+**/ignore.pt
+**/model_scratch.pt
+**/model_transfer.pt
