--- a/Conda/environment.yml
+++ b/Conda/environment.yml
@@ -8,6 +8,7 @@ dependencies:
   - python=3.8
   - jupyter=1.0.0
   - pytorch=1.11.0
+  - torchvision=0.12.0
   - torchinfo=1.7.0
   - jupyter=1.0.0
   - pillow=9.0.1
